--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hockey_webpage_embed",
+  "name": "ice_skating_webpage_embed",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,6 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
